[package]
name = "ohnomore-utils"
version = "0.2.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformation utilities for TüBa-D/Z lemmas"
homepage = "https://github.com/sfb833-a3/ohnomore"
license = "Apache-2.0"

[dependencies]
conllu = "0.6"
getopts = "0.2"
ohnomore = { path = "../ohnomore" }
stdinout = "0.4"
