[package]
name = "ohnomore"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]

[dependencies]
caseless = "0.2"
conllx = { git = "https://github.com/danieldk/conllx-rs" }
failure = "0.1"
fst = "0.3"
lazy_static = "1.0"
maplit = "1.0"
petgraph = "0.4"
seqalign = "0.1"
unicode-normalization = "0.1"

[dev-dependencies]
quickcheck = "0.5"