[package]
name = "ohnomore"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[dependencies]
caseless = "0.2"
conllu = "0.5.1"
fst = "0.4"
lazy_static = "1"
maplit = "1"
seqalign = "0.2"
thiserror = "1"
unicode-normalization = "0.1"

[dev-dependencies]
petgraph = "0.5"