[package]
name = "ohnomore"
version = "0.2.2"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformations for TüBa-D/Z lemmas"
homepage = "https://github.com/sfb833-a3/ohnomore"
license = "Apache-2.0"

[dependencies]
caseless = "0.2"
fst = "0.4"
lazy_static = "1"
maplit = "1"
seqalign = "0.2"
thiserror = "1"
udgraph = "0.6"
unicode-normalization = "0.1"

[dev-dependencies]
petgraph = "0.5"